--- a/PresentationLayer/UICommon/MainStoryboards/LaunchScreen.storyboard
+++ b/PresentationLayer/UICommon/MainStoryboards/LaunchScreen.storyboard
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchImage" translatesAutoresizingMaskIntoConstraints="NO" id="PIp-sd-hre">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="PIp-sd-hre">
                                 <rect key="frame" x="107" y="348" width="200" height="200"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="CNu-UZ-Kxx"/>
@@ -26,7 +26,7 @@
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                         <constraints>
                             <constraint firstItem="PIp-sd-hre" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="R83-OY-ix8"/>
                             <constraint firstItem="PIp-sd-hre" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="sAs-75-XdT"/>
@@ -40,6 +40,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="LaunchImage" width="16" height="16"/>
+        <image name="Image" width="512" height="512"/>
     </resources>
 </document>
